@@ -11,6 +11,8 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+
 @Component
 public class CreditHistoryRepositoryImpl implements CreditHistoryRepository {
 
@@ -34,6 +36,6 @@ public class CreditHistoryRepositoryImpl implements CreditHistoryRepository {
                 .findByCustomerId(customerId.getValue());
         return  creditHistory.map(creditHistoryList ->
                 creditHistoryList.stream()
-                        .map(creditHistoryDataAccessMapper::creditHistoryEntityToCreditHistory).toList());
+                        .map(creditHistoryDataAccessMapper::creditHistoryEntityToCreditHistory).collect(Collectors.toList()));
     }
 }
